--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,19 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/1596113238.py:8: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-      "  memory = ConversationSummaryBufferMemory(\n",
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/1596113238.py:22: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  chain = LLMChain(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -130,13 +120,8 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    \n",
-      "    Human:My name is Nico\n",
-      "    You:\n",
-      "\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Nico\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -144,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "'Nice to meet you, Nico! How can I assist you today?'"
+       "'Hello Nico! How can I assist you today?'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +141,7 @@
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
@@ -164,20 +149,21 @@
     "    llm=llm,\n",
     "    max_token_limit=120,\n",
     "    memory_key=\"chat_history\",\n",
+    "    return_messages=True,\n",
     ")\n",
     "\n",
-    "template = \"\"\"\n",
-    "    You are a helpful AI talking to a human.\n",
-    "\n",
-    "    {chat_history}\n",
-    "    Human:{question}\n",
-    "    You:\n",
-    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a helpful AI talking to a human\"),\n",
+    "        MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "chain = LLMChain(\n",
     "    llm=llm,\n",
     "    memory=memory,\n",
-    "    prompt=PromptTemplate.from_template(template),\n",
+    "    prompt=prompt,\n",
     "    verbose=True,\n",
     ")\n",
     "\n",
@@ -186,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +183,10 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    Human: My name is Nico\n",
-      "AI: Nice to meet you, Nico! How can I assist you today?\n",
-      "    Human:I live in Seoul\n",
-      "    You:\n",
-      "\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Nico\n",
+      "AI: Hello Nico! How can I assist you today?\n",
+      "Human: I live in Seoul\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -212,10 +194,10 @@
     {
      "data": {
       "text/plain": [
-       "\"That's great to know! How can I assist you with information or anything related to Seoul?\""
+       "'Seoul is a vibrant city with a rich history and culture. Is there anything specific you would like to know or talk about regarding Seoul?'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,16 +219,12 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "    You are a helpful AI talking to a human.\n",
-      "\n",
-      "    Human: My name is Nico\n",
-      "AI: Nice to meet you, Nico! How can I assist you today?\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Nico\n",
+      "AI: Hello Nico! How can I assist you today?\n",
       "Human: I live in Seoul\n",
-      "AI: That's great to know! How can I assist you with information or anything related to Seoul?\n",
-      "    Human:What is my name?\n",
-      "    You:\n",
-      "\u001b[0m\n",
+      "AI: Seoul is a vibrant city with a rich history and culture. Is there anything specific you would like to know or talk about regarding Seoul?\n",
+      "Human: What is my name?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -257,7 +235,7 @@
        "'Your name is Nico.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
