--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,221 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
-    "from langchain.globals import set_llm_cache, set_debug\n",
-    "from langchain.cache import InMemoryCache, SQLiteCache\n",
-    "from langchain.callbacks import get_openai_callback\n",
-    "\n",
-    "set_llm_cache(SQLiteCache(\"cache.db\"))\n",
-    "\n",
-    "chat = ChatOpenAI(\n",
-    "    temperature=0.1,\n",
-    "    # streaming=True,\n",
-    "    # callbacks=[\n",
-    "    #     StreamingStdOutCallbackHandler(),\n",
-    "    # ],\n",
-    ")\n",
-    "\n",
-    "examples = [\n",
-    "    {\n",
-    "        \"movie\": \"Shrek\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        Here is what I know:\n",
-    "        Director: Andrew Adamson, Vicky Jenson\n",
-    "        Cast: Mike Myers (Shrek), Eddie Murphy (Donkey), Cameron Diaz (Princess Fiona), John Lithgow (Lord Farquaad)\n",
-    "        Budget: $60 million\n",
-    "        Box office revenue: $487.9 million\n",
-    "        Genre: Animation, Comedy, Adventure, Fantasy\n",
-    "        Brief Synopsis: A grumpy but kind-hearted ogre named Shrek embarks on a journey to rescue Princess Fiona, encountering a talkative donkey and uncovering unexpected secrets along the way.\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"movie\": \"Top Gun\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        I know this:\n",
-    "        Director: Tony Scott\n",
-    "        Cast: Tom Cruise (Maverick), Kelly McGillis (Charlie), Val Kilmer (Iceman), Anthony Edwards (Goose)\n",
-    "        Budget: $15 million\n",
-    "        Box office revenue: $357.3 million\n",
-    "        Genre: Action, Drama\n",
-    "        Brief Synopsis: A talented but reckless Navy pilot, Pete \"Maverick\" Mitchell, trains at the elite Top Gun Naval Fighter Weapons School, facing rivalries, romance, and personal loss while striving to prove himself.\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"movie\": \"Spider-Man\",\n",
-    "        \"answer\": \"\"\"\n",
-    "        I know this:\n",
-    "        Director: Sam Raimi\n",
-    "        Cast: Tobey Maguire (Peter Parker/Spider-Man), Kirsten Dunst (Mary Jane Watson), Willem Dafoe (Norman Osborn/Green Goblin), James Franco (Harry Osborn)\n",
-    "        Budget: $139 million\n",
-    "        Box office revenue: $825 million\n",
-    "        Genre: Action, Superhero, Adventure\n",
-    "        Brief Synopsis: After being bitten by a genetically modified spider, high school student Peter Parker gains superpowers and learns the responsibility of being Spider-Man while facing his first major villain, the Green Goblin.\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "example_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"human\", \"What do you know about {movie}?\"),\n",
-    "        (\"ai\", \"{answer}\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
-    "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
-    ")\n",
-    "\n",
-    "final_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", \"You are a movie expert, you give short answers.\"),\n",
-    "        example_prompt,\n",
-    "        (\"human\", \"What do you know about {movie}?\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "chain = final_prompt | chat\n",
-    "\n",
-    "chain.invoke({\"movie\": \"Jurassic world\"})\n",
-    "\n",
-    "\n",
-    "# with get_openai_callback() as usage:\n",
-    "#     a = chat.predict(\"What is the recipe for soju\")\n",
-    "#     b = chat.predict(\"What is the recipe for bread\")\n",
-    "#     print(a, \"\\n\")\n",
-    "#     print(b, \"\\n\")\n",
-    "#     print(usage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/95251428.py:11: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-      "  memory = ConversationBufferMemory(\n"
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_82318/1623112036.py:16: LangChainDeprecationWarning: The class `UnstructuredFileLoader` was deprecated in LangChain 0.2.8 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-unstructured package and should be used instead. To use it run `pip install -U :class:`~langchain-unstructured` and import as `from :class:`~langchain_unstructured import UnstructuredLoader``.\n",
+      "  loader = UnstructuredFileLoader(\"./files/chapter1.docx\")\n",
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_82318/1623112036.py:20: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+      "  embeddings = OpenAIEmbeddings()\n"
      ]
     }
    ],
    "source": [
-    "from langchain.memory import ConversationBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
-    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import Chroma\n",
+    "from langchain.storage import LocalFileStore\n",
     "\n",
-    "# LLM 초기화\n",
-    "llm = ChatOpenAI(temperature=0.1)\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
     "\n",
-    "# ✅ 메모리 클래스 변경: 대화를 유지하는 ConversationBufferMemory 사용\n",
-    "memory = ConversationBufferMemory(\n",
-    "    return_messages=True\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    separator=\"\\n\",\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=100,\n",
     ")\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter1.docx\")\n",
     "\n",
-    "# ✅ Few-Shot 예제 추가 (세 개의 이모티콘으로 답하도록)\n",
-    "examples = [\n",
-    "    {\"movie\": \"Top Gun\", \"answer\": \"🛩️👨‍✈️🔥\"},\n",
-    "    {\"movie\": \"The Godfather\", \"answer\": \"👨‍👨‍👦🔫🍝\"},\n",
-    "    {\"movie\": \"Titanic\", \"answer\": \"🚢💔🎶\"},\n",
-    "    {\"movie\": \"Jurassic Park\", \"answer\": \"🦖🏃🌿\"},\n",
-    "]\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
     "\n",
-    "example_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [(\"human\", \"What do you know about {movie}?\"), (\"ai\", \"{answer}\")]\n",
-    ")\n",
+    "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
-    "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
-    ")\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(embeddings, cache_dir)\n",
     "\n",
-    "# ✅ 시스템 프롬프트 및 메모리 적용\n",
-    "prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", \"You are a movie expert. You always reply with exactly three emojis.\"),\n",
-    "        few_shot_prompt,  # 예제 추가\n",
-    "        MessagesPlaceholder(variable_name=\"history\"),  # 메모리 활용\n",
-    "        (\"human\", \"{movie}\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# ✅ LCEL 체인 구현: 메모리 활용하도록 설정\n",
-    "def load_memory(_):\n",
-    "    return memory.load_memory_variables({})[\"history\"]\n",
-    "\n",
-    "chain = RunnablePassthrough.assign(history=load_memory) | prompt | llm\n",
-    "\n",
-    "# ✅ 체인 실행 함수\n",
-    "def invoke_chain(movie):\n",
-    "    result = chain.invoke({\"movie\": movie})\n",
-    "    memory.save_context(\n",
-    "        {\"input\": movie},\n",
-    "        {\"output\": result.content},\n",
-    "    )\n",
-    "    print(result.content)"
+    "vectorstore = Chroma.from_documents(docs, cached_embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🛩️👨‍✈️🔥\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': './files/chapter1.docx'}, page_content='THE BOY WHO LIVED\\nr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank\\nyou very much. They were the last people you’d expect to be in- volved in anything strange or mysterious, because they just didn’t hold with such nonsense.\\nMr. Dursley was the director of a firm called Grunnings, which made drills. He was a big, beefy man with hardly any neck, al- though he did have a very large mustache. Mrs. Dursley was thin and blonde and had nearly twice the usual amount of neck, which came in very useful as she spent so much of her time craning over garden fences, spying on the neighbors. The Dursleys had a small son called Dudley and in their opinion there was no finer boy any- where.\\nThe Dursleys had everything they wanted, but they also had a secret, and their greatest fear was that somebody would discover it.\\nThey didn’t think they could bear it if anyone found out about the Potters. Mrs. Potter was Mrs. Dursley’s sister, but they hadn’t met for several years; in fact, Mrs. Dursley pretended she didn’t have a sister, because her sister and her good-for-nothing husband were as unDursleyish as it was possible to be. The Dursleys shuddered to think what the neighbors would say if the Potters arrived in the street. The Dursleys knew that the Potters had a small son, too, but they had never even seen him. This boy was another good reason for keeping the Potters away; they didn’t want Dudley mixing with a child like that.\\nWhen Mr. and Mrs. Dursley woke up on the dull, gray Tuesday our story starts, there was nothing about the cloudy sky outside to suggest that strange and mysterious things would soon be happen- ing all over the country. Mr. Dursley hummed as he picked out his most boring tie for work, and Mrs. Dursley gossiped away happily as she wrestled a screaming Dudley into his high chair.\\nNone of them noticed a large, tawny owl flutter past the window.\\nAt half past eight, Mr. Dursley picked up his briefcase, pecked Mrs. Dursley on the cheek, and tried to kiss Dudley good-bye but missed, because Dudley was now having a tantrum and throwing his cereal at the walls. “Little tyke,” chortled Mr. Dursley as he left the house. He got into his car and backed out of number four’s drive.'),\n",
+       " Document(metadata={'source': './files/chapter1.docx'}, page_content='Mr. Dursley always sat with his back to the window in his office on the ninth floor. If he hadn’t, he might have found it harder to concentrate on drills that morning. He didn’t see the owls swoop-\\ning past in broad daylight, though people down in the street did; they pointed and gazed open-mouthed as owl after owl sped over- head. Most of them had never seen an owl even at nighttime. Mr. Dursley, however, had a perfectly normal, owl-free morning. He yelled at five different people. He made several important tele- phone calls and shouted a bit more. He was in a very good mood until lunchtime, when he thought he’d stretch his legs and walk across the road to buy himself a bun from the bakery.\\nHe’d forgotten all about the people in cloaks until he passed a group of them next to the baker’s. He eyed them angrily as he passed. He didn’t know why, but they made him uneasy. This bunch were whispering excitedly, too, and he couldn’t see a single collecting tin. It was on his way back past them, clutching a large doughnut in a bag, that he caught a few words of what they were saying.\\n“The Potters, that’s right, that’s what I heard —” “— yes, their son, Harry —”\\nMr. Dursley stopped dead. Fear flooded him. He looked back at the whisperers as if he wanted to say something to them, but thought better of it.\\nHe dashed back across the road, hurried up to his office, snapped at his secretary not to disturb him, seized his telephone, and had almost finished dialing his home number when he changed his mind. He put the receiver back down and stroked his mustache, thinking . . . no, he was being stupid. Potter wasn’t such an unusual name. He was sure there were lots of people called Pot- ter who had a son called Harry. Come to think of it, he wasn’t even sure his nephew was called Harry. He’d never even seen the boy. It\\nmight have been Harvey. Or Harold. There was no point in wor- rying Mrs. Dursley; she always got so upset at any mention of her sister. He didn’t blame her — if he’d had a sister like that . . . but all the same, those people in cloaks . . .\\nHe found it a lot harder to concentrate on drills that afternoon and when he left the building at five o’clock, he was still so worried that he walked straight into someone just outside the door.'),\n",
+       " Document(metadata={'source': './files/chapter1.docx'}, page_content='He found it a lot harder to concentrate on drills that afternoon and when he left the building at five o’clock, he was still so worried that he walked straight into someone just outside the door.\\n“Sorry,” he grunted, as the tiny old man stumbled and almost fell. It was a few seconds before Mr. Dursley realized that the man was wearing a violet cloak. He didn’t seem at all upset at being al- most knocked to the ground. On the contrary, his face split into a wide smile and he said in a squeaky voice that made passersby stare, “Don’t be sorry, my dear sir, for nothing could upset me today! Re- joice, for You-Know-Who has gone at last! Even Muggles like your- self should be celebrating, this happy, happy day!”\\nAnd the old man hugged Mr. Dursley around the middle and walked off.\\nMr. Dursley stood rooted to the spot. He had been hugged by a complete stranger. He also thought he had been called a Muggle, whatever that was. He was rattled. He hurried to his car and set off for home, hoping he was imagining things, which he had never hoped before, because he didn’t approve of imagination.\\nAs he pulled into the driveway of number four, the first thing he saw — and it didn’t improve his mood — was the tabby cat he’d spotted that morning. It was now sitting on his garden wall. He was sure it was the same one; it had the same markings around its eyes.\\n“Shoo!” said Mr. Dursley loudly.'),\n",
+       " Document(metadata={'source': './files/chapter1.docx'}, page_content='At half past eight, Mr. Dursley picked up his briefcase, pecked Mrs. Dursley on the cheek, and tried to kiss Dudley good-bye but missed, because Dudley was now having a tantrum and throwing his cereal at the walls. “Little tyke,” chortled Mr. Dursley as he left the house. He got into his car and backed out of number four’s drive.\\nIt was on the corner of the street that he noticed the first sign of something peculiar — a cat reading a map. For a second, Mr. Dursley didn’t realize what he had seen — then he jerked his head around to look again. There was a tabby cat standing on the corner\\nof Privet Drive, but there wasn’t a map in sight. What could he have been thinking of? It must have been a trick of the light. Mr. Dursley blinked and stared at the cat. It stared back. As Mr. Durs- ley drove around the corner and up the road, he watched the cat in his mirror. It was now reading the sign that said Privet Drive — no, looking at the sign; cats couldn’t read maps or signs. Mr. Dursley gave himself a little shake and put the cat out of his mind. As he drove toward town he thought of nothing except a large order of drills he was hoping to get that day.\\nBut on the edge of town, drills were driven out of his mind by something else. As he sat in the usual morning traffic jam, he couldn’t help noticing that there seemed to be a lot of strangely dressed people about. People in cloaks. Mr. Dursley couldn’t bear people who dressed in funny clothes — the getups you saw on young people! He supposed this was some stupid new fashion. He drummed his fingers on the steering wheel and his eyes fell on a huddle of these weirdos standing quite close by. They were whis- pering excitedly together. Mr. Dursley was enraged to see that a couple of them weren’t young at all; why, that man had to be older than he was, and wearing an emerald-green cloak! The nerve of him! But then it struck Mr. Dursley that this was probably some silly stunt — these people were obviously collecting for some- thing . . . yes, that would be it. The traffic moved on and a few minutes later, Mr. Dursley arrived in the Grunnings parking lot, his mind back on drills.\\nMr. Dursley always sat with his back to the window in his office on the ninth floor. If he hadn’t, he might have found it harder to concentrate on drills that morning. He didn’t see the owls swoop-')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "invoke_chain(\"Top Gun\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "👨‍👨‍👦🔫🍝\n"
-     ]
-    }
-   ],
-   "source": [
-    "invoke_chain(\"The Godfather\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🛩️👨‍✈️🔥\n"
-     ]
-    }
-   ],
-   "source": [
-    "invoke_chain(\"What was the first movie I asked about?\")"
+    "results = vectorstore.similarity_search(\"where does Harry live\")\n",
+    "\n",
+    "results"
    ]
   }
  ],
